--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	    <title>Jung So Min</title>
 	</head>
 	<body>
-  <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1dHO7ERy9EQNThRfJ4XakqEAgHISPEQjoil6SMtByFqg&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
-     </body>
+  		<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1dHO7ERy9EQNThRfJ4XakqEAgHISPEQjoil6SMtByFqg&font=Default&lang=ko&initial_zoom=10&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+	</body>
 </html>
