--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
 	    <title>Jung So Min</title>
+		<link rel="shortcut icon" href="favicon.ico">
 	</head>
 	<body>
   		<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1dHO7ERy9EQNThRfJ4XakqEAgHISPEQjoil6SMtByFqg&font=Default&lang=ko&initial_zoom=10&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
