--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	    <meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
-	    <title>Jung So Min</title>
-		<link rel="shortcut icon" href="favicon.ico">
+        	<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>JungSoMin</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="//chayongjin.github.io/jungsomin/favicon.ico" type="image/x-icon">
+		<link rel="apple-touch-icon" href="//chayongjin.github.io/jungsomin/favicon.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="//chayongjin.github.io/jungsomin/favicon.png">
+        	<meta property="og:image" content="//chayongjin.github.io/jungsomin/favicon.png">
 	</head>
 	<body>
   		<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1dHO7ERy9EQNThRfJ4XakqEAgHISPEQjoil6SMtByFqg&font=Default&lang=ko&initial_zoom=10&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
