--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<title>JungSoMin</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="//chayongjin.github.io/jungsomin/favicon.ico" type="image/x-icon">
-		<link rel="apple-touch-icon" href="//chayongjin.github.io/jungsomin/favicon.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="//chayongjin.github.io/jungsomin/favicon.png">
-        	<meta property="og:image" content="//chayongjin.github.io/jungsomin/favicon.png">
+		<link rel="apple-touch-icon" href="//chayongjin.github.io/jungsomin/Image/favicon2.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="//chayongjin.github.io/jungsomin/Image/favicon2.png">
+        	<meta property="og:image" content="//chayongjin.github.io/jungsomin/Image/favicon2.png">
 	</head>
 	<body>
   		<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1dHO7ERy9EQNThRfJ4XakqEAgHISPEQjoil6SMtByFqg&font=Default&lang=ko&initial_zoom=10&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
